tas path-finding

--- a/thesis.tex
+++ b/thesis.tex
@@ -58,6 +58,7 @@
 \input{intro.tex}
 
 \chapter{Crystal and Instrument Coordinate Systems}
+\label{ch:xtal}
 \input{xtal.tex}
 
 \chapter{Path-finding}
