--- a/paths.tex
+++ b/paths.tex
@@ -23,7 +23,7 @@ given in Ref. \cite[Ch. 13, pp. 283-306]{Berg2008}, whose descriptions we follow
 While the book chapter also describes polygonal robots, we limit ourselves to the parts of the chapter 
 that are relevant for the present work.
 
-The movement of the point-like robot is not restricted to conventional cartesian space, its coordinates are given in configuration
+The movement of the point-like robot in question is not restricted to conventional Cartesian space, its coordinates are given in configuration
 space  \cite[Ch. 13.1, pp. 284-286]{Berg2008}, which comprises its inherent degrees of freedom and can -- for instance -- include angular motion.
 
 The algorithm consists of two parts: First, the separation of allowed space into sectors, within which the robot can move 
@@ -33,12 +33,12 @@ In the first part, a trapezoidal map (explained below) is created for the config
 both of polygonal shape. The trapezoids inside the obstacles are removed form the final map as the robot has to stay clear 
 of them. The second part of the algorithm calculates the path of the robot by finding the trapezoids which contain the start 
 and goal points, and finding the edges between adjacent trapezoids from starting to ending trapezoid via a breadth-first search in the 
-trapezoidal map. The robot will thus first move to the centre of its containing trapezoid, to the centre of an edge connecting 
+trapezoidal map. The robot will thus first move to the centre of its containing trapezoid, followed by the centre of an edge connecting 
 the current to the next trapezoid, next to the centre of the next trapezoid, and so forth until it arrives at its goal. 
 The situation is depicted in Fig. \ref{fig:robot_trapezoids}, where we restrict ourselves to line-like obstacles for simplicity, effectively
 only using the second part of the algorithm.
 
-Trapezoidal maps and the algorithm for their calculation are given in Ref. \cite[Ch. 6, pp. 121-146]{Berg2008}. The map of
+Trapezoidal maps and the algorithm for their calculation are given in Ref. \cite[Ch. 6, pp. 121-146]{Berg2008}. Basically, the map of
 trapezoids is obtained by extending vertical lines from every vertex in a collection of line segments. The vertical
 extensions reach out until they intersect with another line segment of the collection, or an outer bounding box. The original line 
 segment and the intersected segment on top (or bottom, respectively) together with the vertical lines form a trapezoid, as shown in 
@@ -98,7 +98,8 @@ very complicated treatment necessary for the instrument itself.
 
 \subsection*{Crystal coordinates configuration space}
 A better way is to use a configuration space where the instrument is represented as a single point in that space. This comes at the 
-cost of the shape of the walls becoming more complicated, they may not even be simply-connected anymore in that space. There
+cost of the shape of the walls becoming more complicated when transformed into configuration space, 
+they may not even be simply-connected anymore in that space. There
 are two choices for such a configuration space: We can either use the reciprocal crystal coordinates as discussed in Ch. \ref{ch:xtal}
 or use a configuration space comprised of the instrumental angles.
 
@@ -111,7 +112,7 @@ On the other hand, using the instrument angles seems to be even more complicated
 six angles, namely the crystal and scattering angles for the monochromator, the sample and the analyser crystals, respectively,
 leading to a six-dimensional configuration space. When can take into account that not all angles are independent of one another:
 The monochromator and analyser scattering angles are always double their respective crystal angles, because they both
-have to fulfil the Bragg condition. We are therefore left with four independent angles: the monochromator and analyser 
+have to fulfill the Bragg condition. We are therefore left with four independent angles: the monochromator and analyser 
 scattering angles as well as the sample crystal and scattering angle. 
 
 We are mainly interested in collisions of the instrument with walls or itself, this way the sample crystal angle can be dropped 
@@ -119,11 +120,11 @@ from the analysis, because it only rotates the sample axis, but does not move th
 positions if it rotates too far and rips out cables or tubes, but these cases we can treat as their own one-dimensional problem. 
 
 A further simplification is possible when taking into account that during a typical experiment the instrument usually only moves 
-either the monochromator or the analyser angle to choose the energy transfer, but not both. Therefore, one of these angles, 
+either its monochromator or analyser angle to choose the energy transfer, but not both. Therefore, one of these angles, 
 usually the analyser angle, rests at a constant value. In total, we are left with a two-dimensional configuration space comprised 
 of the monochromator and the sample scattering angle. A typical situation is shown in Fig. \ref{fig:tas_wall}. Here, the instrument 
 motion is blocked by an obstacle in the experimental zone. The configuration space image shows that the obstacle transforms
-into a non-primitive geometric object in configuration space, which does not even have to be simply-connected.
+into a non-primitive geometric object in configuration space, which -- as already mentioned -- does not even have to be simply-connected.
 
 \begin{figure}[htb]
 	\centering
