figure flushing bug

--- a/paths.tex
+++ b/paths.tex
@@ -134,3 +134,7 @@ into a non-primitive geometric object in configuration space, which -- as alread
 		of disallowed positions are given either by collisions of the instrument with the outer walls or with itself.}
 	\label{fig:tas_wall}
 \end{figure}
+
+
+\section{Finding the Voronoi regions}
+TODO
