--- a/thesis.tex
+++ b/thesis.tex
@@ -13,8 +13,9 @@
 \usepackage{amsmath}
 \usepackage{tensor}
 \usepackage{bm}
-\usepackage{graphicx}
 \usepackage{siunitx}
+\usepackage{graphicx}
+\usepackage[section]{placeins}
 \usepackage{babel}
 \usepackage[hyphens]{url}
 \usepackage[numbib, chapter]{tocbibind}
