--- a/paths.tex
+++ b/paths.tex
@@ -129,9 +129,10 @@ into a non-primitive geometric object in configuration space, which -- as alread
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width = 0.95 \textwidth]{figures/tas_wall.jpg}
-	\caption{An obstacle in the instrument space (left) and in the angular configuration space (right). In the configuration
-		space, allowed instrument angular positions are shown in white, forbidden positions in black. The outer areas
-		of disallowed positions are given either by collisions of the instrument with the outer walls or with itself.}
+	\caption{An obstacle as it appears in the instrument space (left) and in the angular configuration space (right). 
+		In the configuration space, allowed instrument angular positions are shown in white, forbidden positions in black. 
+		The outer areas of disallowed positions are given either by collisions of the instrument with the outer walls or 
+		with itself.}
 	\label{fig:tas_wall}
 \end{figure}
 
