added line segment voronoi references

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,7 @@
+% -----------------------------------------------------------------------------
+% books
+% -----------------------------------------------------------------------------
+
 @book
 {
 	Merzbacher1998,
@@ -8,6 +12,7 @@
 	isbn = {0-471-88702-1},
 }
 
+
 @book
 {
 	Shirane2002,
@@ -17,6 +22,7 @@
 	publisher = {Cambridge University Press},
 	isbn = {978-0521411264},
 }
+
 
 @book
 {
@@ -131,7 +137,13 @@
 	publisher={Addision-Wesley Professional},
 	isbn={978-0134997834},
 }
+% -----------------------------------------------------------------------------
 
+
+
+% -----------------------------------------------------------------------------
+% articles
+% -----------------------------------------------------------------------------
 
 @article
 {
@@ -230,6 +242,41 @@
 }
 
 
+@article
+{
+	Held2001,
+	author = {Martin Held},
+	title = {{VRONI: An engineering approach to the reliable and efficient computation of Voronoi diagrams of points and line segments}},
+	journal = {Computational Geometry},
+	volume = {18},
+	number = {2},
+	pages = {95-123},
+	year = {2001},
+	issn = {0925-7721},
+	doi = {https://doi.org/10.1016/S0925-7721(01)00003-7},
+	url = {https://www.sciencedirect.com/science/article/pii/S0925772101000037},
+}
+
+
+@article
+{
+	Simonson2009,
+	author = {{Simonson, Lucanus and Suto, Gyuszi}},
+	title = {{Geometry Template Library for STL-like 2D Operations}},
+	journal = {{Boostcon 2009, Aspen, Colorado, USA}},
+	volume = {4},
+	year = {2009},
+	url = {https://www.boost.org/doc/libs/1_75_0/libs/polygon/doc/GTL_boostcon2009.pdf},
+}
+
+% -----------------------------------------------------------------------------
+
+
+
+% -----------------------------------------------------------------------------
+% websites
+% -----------------------------------------------------------------------------
+
 @misc
 {
 	wiki_fractional,
@@ -240,6 +287,7 @@
 	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Fractional_coordinates&oldid=961675499}",
 	note = "[Online; accessed 1-February-2021]"
 }
+
 
 @misc
 {
@@ -252,6 +300,7 @@
 	note = "[Online; accessed 10-February-2021]"
 }
 
+
 @misc
 {
 	wiki_oklo,
@@ -262,6 +311,7 @@
 	howpublished = "\url{https://de.wikipedia.org/w/index.php?title=Naturreaktor_Oklo&oldid=203811915}",
 	note = "[Online; Stand 10. Februar 2021]"
 }
+
 
 @misc
 {
@@ -274,6 +324,7 @@
 	note = "[Online; accessed 14-April-2021]"
 }
 
+
 @misc
 {
 	web_nobel1994,
@@ -285,6 +336,7 @@
 	note = "[Online; accessed 13-April-2021]"
 }
 
+
 @misc
 {
 	web_mlz,
@@ -293,6 +345,7 @@
 	howpublished = "\url{https://mlz-garching.de}",
 	note = "[Online; accessed 13-April-2021]",
 }
+
 
 @misc
 {
@@ -303,6 +356,7 @@
 	note = "[Online; accessed 13-April-2021]",
 }
 
+
 @misc
 {
 	web_oakridge,
@@ -311,6 +365,7 @@
 	howpublished = "\url{https://neutrons.ornl.gov/hfir}",
 	note = "[Online; accessed 13-April-2021]",
 }
+
 
 @misc
 {
@@ -321,6 +376,7 @@
 	note = "[Online; accessed 13-April-2021]",
 }
 
+
 @misc
 {
 	web_ill_visa,
@@ -330,6 +386,7 @@
 	howpublished = "\url{https://visa.ill.eu}",
 	note = "[Online; accessed 13-April-2021]",
 }
+
 
 @misc
 {
@@ -342,8 +399,16 @@
 	note = "[Online; accessed 13-April-2021]",
 }
 
+% -----------------------------------------------------------------------------
 
-@phdthesis{
+
+
+% -----------------------------------------------------------------------------
+% theses
+% -----------------------------------------------------------------------------
+
+@phdthesis
+{
 	PhDWeber,
 	author = "Weber, Tobias",
 	title = {{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$}},
@@ -355,3 +420,4 @@
 	url = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
 	howpublished = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
 }
+% -----------------------------------------------------------------------------
