--- a/thesis.bib
+++ b/thesis.bib
@@ -269,6 +269,22 @@
 	url = {https://www.boost.org/doc/libs/1_75_0/libs/polygon/doc/GTL_boostcon2009.pdf},
 }
 
+
+% note: boost.polygon's voronoi implementation is based on this article
+@article
+{
+	Fortune1987,
+	author = {Fortune, Steven},
+	title = {{A Sweepline Algorithm for Voronoi Diagrams}},
+	journal = {Algorithmica},
+	volume = {2},
+	number = {1},
+	pages = {153-174},
+	year = {1987},
+	publisher = {Springer},
+	doi = {https://doi.org/10.1007/BF01840357},
+}
+
 % -----------------------------------------------------------------------------
 
 
