overview of path-finding algorithm

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -5,6 +5,9 @@
 % @license see 'LICENSE' file
 %
 
+\chapter{Introduction}
+\label{ch:intro}
+
 In this chapter we introduce some basic concepts of neutron scattering and shortly present two types of instruments typically found at research reactors (Sec. \ref{sec:instruments}). A special emphasis is put on triple-axis spectrometers (TAS) as the work-horse of inelastic neutron scattering. Finally, we summarise the current state of autonomous experimentation (Sec. \ref{sec:autonomous}).
 
 
