starting implementation chapter

--- a/tex/paths.tex
+++ b/tex/paths.tex
@@ -4,11 +4,12 @@
 % @date 2021
 % @license see 'LICENSE' file
 %
-\chapter{Path-finding and Algorithm Overview}
 
-This chapter is devoted to the development of the theoretical frameworks for path-finding in a triple-axis spectrometer (TAS). 
-The path should furthermore be optimal in the sense that the instrument not only avoids obstacles like walls or equipment in 
-the experimental area, but also keeps a maximum distance from them.
+\chapter{Path-finding Strategy}
+\label{ch:paths}
+
+This chapter is devoted to the development of the theoretical idea for path-finding in a triple-axis spectrometer (TAS). The path should be optimal in the sense that the instrument not only avoids obstacles like walls or equipment in the experimental area, but also keeps a maximum distance from them. This chapter tries to keep its descriptions ``high level'', the details
+and the implementation of the algorithm will be presented in the next chapter.
 
 Before looking at the situation with TAS in section \ref{sec:tasrobot}, we shortly review the ideas of motion planning for a 
 point-like robot in section \ref{sec:pointrobot}.
@@ -69,7 +70,7 @@ special cases, for example to eliminate vertices with equal $x$ coordinate compo
 
 \subsection*{Retraction method}
 Apart from decomposing the available configuration space into sectors, a more direct approach can be taken. This
-approach is called the retraction method and is based on constructing the Voronoi regions (see \ref{ch:voronoi})
+approach is called the retraction method and is based on constructing the Voronoi regions 
 of the obstacles and moving the robot along the Voronoi edges, which ensures that the path is optimal in the
 sense that the robot is always at the farthest distance from any obstacle \cite[pp. 163 and 304]{Berg2008}.
 An example path for the same problem as before is given in Fig. \ref{fig:robot_voronoi}.
@@ -142,6 +143,7 @@ simply-connected.
 
 
 \subsection*{Overall strategy}
+\label{sec:strategy}
 
 The strategy for planning the motion of the spectrometer comprises several steps. Modifying the algorithm for
 a point-like robot described in Ref. \cite[Ch. 13, pp. 283-306]{Berg2008} (see Sec. \ref{sec:pointrobot}), we summarise the
@@ -160,7 +162,7 @@ Two tasks are needed. The first task is building the possible paths the instrume
 			produced in practice. These need to be eliminated or at least smoothed before the next step.
 		\item Split all polygonal line segments that build up the contours into convex regions. With this we can group all lines
 			in a convex region and only calculate the Voronoi diagrams for these groups instead of all line segments.
-		\item Calculate the Voronoi diagram (see Ch. \ref{ch:voronoi}) for the line segment groups. The Voronoi edges are the
+		\item Calculate the Voronoi diagram for the line segment groups. The Voronoi edges are the
 		possible instrument paths in configuration space. Save both the Voronoi diagram as well as its representation in a graph structure.
 		\item Simplify the Voronoi diagram. For example, Voronoi vertices and edges inside obstacle regions have to be removed.
 			These are generated in the previous step because, there, no differentiation was made between the ``inside'' and
@@ -176,8 +178,7 @@ Two tasks are needed. The first task is building the possible paths the instrume
 			space.
 		\item Determine the Voronoi regions of the start and end coordinate points.
 		\item Move the instrument to the edge of the start Voronoi region.
-		\item Calculate the shortest path to the edge of the Voronoi region containing the end point using Dijkstra's algorithm
-			(see Ch. \ref{ch:dijkstra}) and move the instrument along that path.
+		\item Calculate the shortest path to the edge of the Voronoi region containing the end point using Dijkstra's algorithm and move the instrument along that path.
 		\item Move the instrument from the edge of the Voronoi region containing the end point towards that point.
 	\end{enumerate}
 \end{enumerate}
