--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -137,6 +137,17 @@
 	publisher={Addision-Wesley Professional},
 	isbn={978-0134997834},
 }
+
+
+@book
+{
+	ISOCPP20,
+	title = {{International Standard ISO/IEC 14882 Sixth Edition 2020-12, Programming Languages -- C++}},
+	author = {{International Organization for Standardization (ISO)}},
+	year = {2020},
+	publisher = {ISO, Geneva, Switzerland},
+	url = {https://www.iso.org/standard/79358.html},
+}
 % -----------------------------------------------------------------------------
 
 
