--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -57,10 +57,9 @@
 \input{tex/intro.tex}
 \input{tex/xtal.tex}
 \input{tex/paths.tex}
+\input{tex/impl.tex}
+\input{tex/gui.tex}
 
-\chapter{Implementation and Algorithm Details}
-% library
-% GUI
 % Nomad interface
 % Verweis auf Nomad 3D und vTAS/vEXP
 
@@ -68,8 +67,6 @@
 \appendix
 %\part{Back matter}
 %\addcontentsline{toc}{part}{Back matter} 
-\input{tex/voronoi.tex}
-\input{tex/dijkstra.tex}
 \input{tex/notation.tex}
 \input{tex/publications.tex}
 \input{tex/errata.tex}
