--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -65,7 +65,7 @@
 	author = {Gross, R. and Marx, A.},
 	title = {{Festk\"orperphysik}},
 	year = {2012},
-	publisher = {Oldenbourg Wissenschaftsverlag GmbH, Rosenheimer Str. 145, 81671 M\"unchen, Germany},
+	publisher = {Oldenbourg Wissenschaftsverlag GmbH, Rosenheimer Str. 145, 81671 Munich, Germany},
 	isbn = {978-3-486-71294-0},
 	doi = {}
 }
@@ -441,7 +441,7 @@
 	title = {{Dynamics at the Orbital Ordering Phase Transition in $MgV_2O_4$ and at the Ferromagnetic Phase Transition in $MnSi$}},
 	type = "Dissertation",
 	school = {Technische Universität M\"unchen, Physikdepartment E21},
-	address = {M\"unchen, Germany},
+	address = {Munich, Germany},
 	year = 2017,
 	isbn = {978-3-8439-3114-4},
 	url = "\url{http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20170320-1339645-0-4}",
