--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -57,7 +57,7 @@
 \input{tex/intro.tex}
 \input{tex/xtal.tex}
 \input{tex/paths.tex}
-\input{tex/impl.tex}
+\input{tex/implementation.tex}
 \input{tex/gui.tex}
 
 % Nomad interface
