--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -426,6 +426,30 @@
 	note = "[Online; accessed 13-April-2021]",
 }
 
+
+@misc
+{
+	web_boost,
+	title = {{Boost C++ Libraries (Software)}},
+	author = {{Various Authors}},
+	year = {2004-2021},
+	url = "\url{https://www.boost.org/}",
+	howpublished = "\url{https://www.boost.org/}",
+	note = "[Online; accessed 3-July-2021]",
+}
+
+
+@misc
+{
+	web_boost_signals,
+	title = {{Boost.Signals2, part of the Boost C++ Libraries \cite{web_boost} (Software)}},
+	author = {Douglas Gregor and Frank Mori Hess},
+	year = {2001-2009},
+	url = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html}",
+	howpublished = "\url{https://www.boost.org/doc/libs/1_76_0/doc/html/signals2.html}",
+	note = "[Online; accessed 3-July-2021]",
+}
+
 % -----------------------------------------------------------------------------
 
 
