--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -18,6 +18,7 @@
 \usepackage[section]{placeins}
 \usepackage{babel}
 \usepackage[hyphens]{url}
+\usepackage{listings}
 \usepackage[numbib, chapter]{tocbibind}
 \usepackage[colorlinks=true, linkcolor=black, citecolor=blue, urlcolor=blue, unicode=true]{hyperref}
 \usepackage[a4paper]{geometry}
